# can-trial-gen2

./: .gitmodules  CMakeLists.txt  main.c  naming.md  todo.md
CanTxManager/: CMakeLists.txt  CanTxManagerTask.c
CanTxManager/include/: CanTxManager.h
appl/: CMakeLists.txt  main copy.c  main.c
appl/include/: appl_main.h
can_manager/: CMakeLists.txt  can_manager.c
can_manager/include/: can_manager.h
common_definition/: CMakeLists.txt  app_errno.h  can.h  cdf_can.h  cdf_err.h  cdf_task.h  task_cfg.h
common_include/: CMakeLists.txt  my_can.h
free_rtos/: CMakeLists.txt
free_rtos/FreeRTOS-Config/: FreeRTOSConfig.h
hardware_driver/: CMakeLists.txt  hardware_driver.c  mcp2515.c  mcp2515_recv.c  mcp2515_send.c  rp2040.c
hardware_driver/include/: hardware_driver.h  hwd_api.h
hardware_driver/include/private/: can_irq.h  mcp2515.h  mcp2515_reg.h  mcp2515_register.h  mcp2515_spi_cmd.h  mcp2515_spicmd.h  rp2040.h  rp2040_gpio.h
my_stdlib/: CMakeLists.txt  can.h  my_can.h  my_error_code.h  my_task_cfg.h  my_types.h
network_manager/: CMakeLists.txt  ntm_can_msg.c  ntm_task.c
network_manager/include/: ntm_task.h
network_manager/include/private/: can_id.h  ntm_can_id.h  ntm_can_msg.h
